tests/type-errors/no_result_in_prog.arl
archetype no_result_in_prog

function f (i : int) : int {
  return result
}

action main () {
  effect {
    var v = result;
    ()
  }
}
